--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
   <title>Frontend Mentor | NFT preview card component</title>
   <link rel="stylesheet" href="css/styles.css">
@@ -20,7 +20,7 @@
 
 <div class="cards">
   <div class="image">
-    <img src="C:\Users\Aman Kumar\Downloads\nft-preview-card-component-main\nft-preview-card-component-main\images\image-equilibrium.jpg" alt="">
+    <img src="image-equilibrium.jpg" alt="equillibrium">
 
   </div>
   <div class="Title">
@@ -44,7 +44,7 @@
 
 
 <div class="End">
-  <img class="avatar" src="C:\Users\Aman Kumar\Downloads\nft-preview-card-component-main\nft-preview-card-component-main\images\image-avatar.png" alt="Avatar">
+  <img class="avatar" src="image-avatar.png" alt="Avatar">
   <p class="last">Creation of Jules Wyvern</p>
 
 
